tests/errors/runtime.RangeWIthZeroStep.res
5..0
1..5 (2)
1..5

══╡ Value Error ╞═════════════════════════════════════════════════════════════════════════════════════════ <script> ══

  Problem when creating Range
  
  Attribute step can't be 0!

  ┃ File: tests/errors/runtime.RangeWIthZeroStep.art
  ┃ Line: 5
  ┃ 
  ┃    3 ║  print range.step: 1 1 5
  ┃    4 ║  
  ┃    5 ║► print range.step: 0 1 5
  ┃    6 ║